Engine/OS/iOS/TERRA_Utils.h

void showAlert(char *message);
void vibrate();
void iPhoneLog(char *s);
void initAppViews();
void enableAVCapture();
void openAppStore(char *appid);
AVAudioPlayer *audioOpen(char *name);
void audioPlay(AVAudioPlayer *audioPlayer);
void audioStop(AVAudioPlayer *audioPlayer);
void audioSetVolume(AVAudioPlayer *audioPlayer, float value);
void audioClose(AVAudioPlayer *audioPlayer);
char* resolveHost(char *host);
void IAP_RequestProduct(char *s);
bool IAP_CanPurchase();
void IAP_Purchase(char *s);
void changeLeaderboard(char *board);
void showLeaderboard();
void submitScore(int score);
void setPrefString(char* key, char* data);
void getPrefString(char* key, char* dest);
void startAVCapture();
void stopAVCapture();
void AnalyticsLog(char *s);
void AnalyticsLogWithParams(char *s, char *s2);
int getCurrentOrientation();
void showAds();